--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -99,7 +99,7 @@ body {
 
 /* Header Tag code, contains the background image and title*/
 .jumbotron_container {
-  background-image: url("Homepageimg.jpg");
+  background-image: url("Homepageimg.JPG");
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
