--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -549,13 +549,17 @@ input[type=submit]:hover {
     width: 100%;
   }
 
-  #desktop {
+  /* #desktop {
     display: none;
     visibility: hidden;
   }
 
   #mobile {
     display: block !important;
+  } */
+
+  #mobile {
+    display: none !important;
   }
 }
 
