--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -464,6 +464,7 @@ input[type=submit]:hover {
 @media only screen and (min-width : 640px) and (max-width : 1024px) {
   body {
     background-color: coral;
+    -webkit-text-size-adjust: 100%;
   }
 
   #navbar a {
