--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -463,6 +463,8 @@ input[type=submit]:hover {
 
 @media only screen and (min-width : 640px) and (max-width : 1024px) {
   body {
+    height: 100%;
+    width: 100%;
     background-color: coral;
     -webkit-text-size-adjust: 100%;
   }
