--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -140,6 +140,7 @@ body {
 /* About Section code, contains background color, text, and images */
 .about_container {
   /* background-color: #333; */
+  position: relative;
   height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -209,6 +210,7 @@ a:hover {
   color: white;
   text-align: center;
   padding: 32px;
+  position: relative;
 }
 
 .row_gallery {
@@ -219,6 +221,7 @@ a:hover {
   /* IE 10 */
   flex-wrap: wrap;
   padding: 2.5px;
+  position: relative;
 }
 
 /* Create two equal columns that sits next to each other */
@@ -616,9 +619,8 @@ input[type=submit]:hover {
 
 }
 
-@media screen and (orientation:landscape) and (min-width : 640px) and (max-width : 1024px) {
+/* @media screen and (orientation:landscape) and (min-width : 640px) and (max-width : 1024px) {
 
-  /* Your CSS Here*/
   body {
     background-color: coral;
   }
@@ -686,7 +688,7 @@ input[type=submit]:hover {
   .contact_img {
     width: 100%;
   }
-}
+} */
 
 :root {
   --primary-color: #302AE6;
@@ -696,7 +698,7 @@ input[type=submit]:hover {
   --fa-color: red;
   --bg-color: white;
   --heading-color: #292922;
-  --card-color: white;
+  --card-color: #d3d3d3;
 }
 
 [data-theme="dark"] {
@@ -721,7 +723,8 @@ body {
   color: var(--title-color);
 }
 
-h2 {
+h2,
+h4 {
   color: var(--secondary-color);
 }
 
@@ -739,8 +742,8 @@ p {
   color: var(--font-color);
 }
 
-.card {
-  background-color: var(--card-color);
+.cards {
+  background-color: var(--card-color) !important;
 }
 
 label {
