--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -112,7 +112,7 @@ body {
 
 /* Header Tag code, contains the background image and title*/
 .jumbotron_container {
-  background-image: url("../assets/homeimg.jpg");
+  background-image: url("../assets/homebg.png");
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
